--- a/Drum-kit/index.html
+++ b/Drum-kit/index.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drum kit BY Richa Kochar</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href=" link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&family=Ubuntu:ital,wght@1,500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+</head>
+<body>
+    <h1 id="title">Drum 🥁 Kit</h1>
+    <div id="sets">
+        <button class="w drum">w</button>
+        <button class="a drum">a</button>
+        <button class="s drum">s</button>
+        <button class="d drum">d</button>
+        <button class="j drum">j</button>
+        <button class="k drum">k</button>
+        <button class="l drum">l</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+<div class="footer">
+<footer class="wrapper">Made By 💝 Richa</footer>
+</div>
+</html>
