--- a/Password-Strength-Generator/index.html
+++ b/Password-Strength-Generator/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Password Strength Indicator</title>
+</head>
+<link rel="stylesheet" href="style.css">
+<body>
+    <div class="container">
+        <div class="input-box">
+            <input type="password" id="password" placeholder="Password">
+            <button type="submit"><img src="arrow-png-download.png" alt="">
+            </button>
+            <p id="message">Password is <span id="res"></span> </p>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
