--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -1,1 +1,14 @@
-
+<html>
+    <head>
+        <title>
+            Snake Game
+        </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1 class="head">Snake Game</h1>
+        <canvas id="mycanvas"></canvas>
+        <footer>Made by Richa 💟 </footer>
+        <script src="script.js"></script>
+    </body>
+</html>
