--- a/todolist/index.html
+++ b/todolist/index.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do-list-web-app</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
+    <h1>To do list</h1>
     <div class="container">
-        <div class="heading">
-          <h1>To-Do List</h1>
+        <div id="newtask">
+            <input type="text" placeholder="Task to be done.." id="inp">
+            <button id="push">Add</button>
         </div>
-        <div id="form">
-            <input id="inputField" type="text">
-            <button id="addToDo">+</button>
-            </div>
-        </div>
-        <div>
+        <div id="tasks"></div>
+    </div>
 <script src="script.js"></script>          
 </body>
-
+<!-- <footer>Made By Richa</footer> -->
 </html>
