--- a/todolist/index.html
+++ b/todolist/index.html
@@ -16,7 +16,7 @@
         </div>
         <div id="tasks"></div>
     </div>
-<script src="script.js" type="text/JavaScript"></script>          
+<script src="script.js" type="text/JavaScript"/>          
 </body>
 <!-- <footer>Made By Richa</footer> -->
 </html>
